removed deprecated stuff and fixed deprecation errors